<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheetahActivity" >

    <ImageView
        android:id="@+id/cheetahView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/rcheetah3" />

<LinearLayout
  	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:layout_marginLeft="25dp">
									
 
    	
    	<Button
        	android:id="@+id/slowerBtn"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/slower_str" />

    	<Button
    	    android:id="@+id/fasterBtn"
    	    style="?android:attr/buttonStyleSmall"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/faster_str" />

    	<Button
    	    android:id="@+id/reverBtn"
    	    style="?android:attr/buttonStyleSmall"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/reverse_str" />

    	<Button
    	    android:id="@+id/pauseBtn"
    	    style="?android:attr/buttonStyleSmall"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/pause_str" />

</LinearLayout>
    

</LinearLayout>